--- a/src/app/componentes/orden/crear-orden/crear-orden.component.html
+++ b/src/app/componentes/orden/crear-orden/crear-orden.component.html
@@ -116,34 +116,43 @@
       </div>
       <div class="card-body">
 
-        <hr>
-        Seleccionar servicios
-        <select class="form-control" (change)="onChange($event.target.value)">
-          <option *ngFor="let servicioDisponible of serviciosDisponibles" value="{{servicioDisponible.id}}">{{servicioDisponible.descripcion}}</option>
-        </select>
+        <hr> Seleccionar servicios
+
+        <div class="row">
+          <div class="col-md-4">
+            <select class="form-control"  (change)="onChange($event.target.value)">
+              <option *ngFor="let servicioDisponible of serviciosDisponibles" value="{{servicioDisponible.id}}">{{servicioDisponible.descripcion}}</option>
+            </select>
+          </div>
+  
+        </div>
+
         <hr>
 
         <table *ngIf="orden.servicios.length>0" class="table table-sm">
           <thead class="thead-primary">
             <tr>
-
+              <th></th>
               <th scope="col">Servicio</th>
               <th scope="col">Tiempo estandar</th>
-              <th scope="col">Categoría</th>
+              <th *ngIf="id!='nuevo'" scope="col">Estado</th>
             </tr>
           </thead>
           <tbody>
-            <tr *ngFor="let servicio of orden.servicios">
-              <td>{{servicio.descripcion}}</td>
-              <td>{{servicio.tiempoEstandar}}</td>
-              <td>{{servicio.categoria.descripcion}}</td>
+            <tr *ngFor="let servicio of orden.servicios;let i = index" [attr.data-index]="i">
+              <td>
+                  <button (click)="eliminarServicio(i)" type="button" class="btn btn-danger btn-sm"><i class="mdi mdi-delete"></i></button>
+              </td>
+              <td>{{servicio.servicio.descripcion}}</td>
+              <td>{{servicio.servicio.tiempoEstandar}}</td>
+              <td *ngIf="id!='nuevo'">{{servicio.estado}}</td>
             </tr>
 
 
           </tbody>
         </table>
 
-       
+
 
 
       </div>
