--- a/src/assets/scss/variable.scss
+++ b/src/assets/scss/variable.scss
@@ -17,8 +17,8 @@ $sidebar: white;
 $sidebar-white: #e5edef;
 $sidebar-alt:#edf0f5;
 $bodycolor:#ecf0f1;
-$headingtext: #455a64;
-$bodytext: #67757c; 
+$headingtext: black;
+$bodytext: black; 
 $sidebar-text: #687384;
 $sidebar-icons: #555f6d ;
 
@@ -93,7 +93,7 @@ $lft: left;
 $border: rgba(120, 130, 140, 0.13);
 $table-border:#f3f1f1;
 $card-brd:#d7dfe3;
-$dark-text: #848a96;
+$dark-text: black;
 $radius: 4px;
 $form-brd: #b1b8bb;
 
