--- a/src/app/componentes/persona/consultar-persona/consultar-persona.component.html
+++ b/src/app/componentes/persona/consultar-persona/consultar-persona.component.html
@@ -14,13 +14,55 @@
         </div>
 
       </div>
+      <div class="col-md-2">
+
+     
+
+        <select class="form-control" [(ngModel)]="registros" (change)="reiniciar()">
+          <option value="5">5</option>
+          <option value="10">10</option>
+          <option value="20">20</option>
+          <option value="40">40</option>
+
+
+        </select>
+
+      </div>
+
+      <div class="col-md-2">
+
+
+
+        <select class="form-control" [(ngModel)]="orden" (change)="reiniciar()">
+          <option value="ASC">Más antiguas</option>
+          <option value="DESC">Más nuevas</option>
+
+
+
+        </select>
+
+      </div>
 
       <div class="col-md-1">
-        <a class="btn btn-primary" href="#/persona/crearpersona/nuevo"><i class="mdi mdi-plus"></i></a>
+        <a class="btn btn-primary" href="#/persona/crearpersona/nuevo">
+          <i class="mdi mdi-plus"></i>
+        </a>
       </div>
 
 
-     
+
+    </div>
+
+    <div class="row">
+    
+
+      
+      <div class="col-md-2">
+     <!--    <button class="btn btn-primary" (click)="reiniciar">
+          <i class="mdi mdi-refresh"></i>
+        </button> -->
+
+      </div>
     </div>
   </div>
 </div>
@@ -30,35 +72,62 @@
     Resultados
   </div>
   <div class="card-body">
-      <table class="table table-sm table-striped table-responsive-sm">
-          <thead class=" ">
-            <tr>
-              <th></th>
-              <th scope="col">Identificación</th>
-              <th scope="col">Nombre / Razón Social</th>
-              <th scope="col">Teléfono</th>
-              <th scope="col">Correo</th>
-              <th scope="col">Estado</th>
-            </tr>
-          </thead>
-          <tbody>
-            <tr *ngFor="let persona of personas"> 
-             
-              <td>
-                  <a class="btn btn-sm btn-primary"  title="Editar persona" href="#/persona/crearpersona/{{persona.id}}"><i class="mdi mdi-pencil"></i></a>
-                <button [disabled]="persona.cliente.length>0 || persona.usuario.length>0" (click)="eliminarPersona(persona.id)" class="btn btn-sm btn-danger" title="Elimina persona"><i class="mdi mdi-delete"></i></button>
-                
-              </td>
-              <td>{{persona.cedula }}</td>
-              <td><a class="btn btn-link" href="#/persona/informacionpersona/{{persona.id}}">{{persona.nombre}}</a></td>
-              <td>{{persona.telefono}}</td>
-              <td>{{persona.correo}}</td>
-              <td>{{persona.estado}}</td>
-            </tr>
-         
-         
-          </tbody>
-        </table>
+    <table class="table table-sm table-striped table-responsive-sm table-responsive">
+      <thead class=" ">
+        <tr>
+          <th></th>
+          <th scope="col">Identificación</th>
+          <th scope="col">Nombre / Razón Social</th>
+          <th scope="col">Teléfono</th>
+          <th scope="col">Correo</th>
+          <th scope="col">Estado</th>
+        </tr>
+      </thead>
+      <tbody>
+        <tr *ngFor="let persona of personas">
+
+          <td>
+            <a class="btn btn-sm btn-primary" title="Editar persona" href="#/persona/crearpersona/{{persona.id}}">
+              <i class="mdi mdi-pencil"></i>
+            </a>
+            <button [disabled]="persona.cliente.length>0 || persona.usuario.length>0" (click)="eliminarPersona(persona.id)" class="btn btn-sm btn-danger"
+              title="Elimina persona">
+              <i class="mdi mdi-delete"></i>
+            </button>
+
+          </td>
+          <td>{{persona.cedula }}</td>
+          <td>
+            <a class="btn btn-link" href="#/persona/informacionpersona/{{persona.id}}">{{persona.nombre}}</a>
+          </td>
+          <td>{{persona.telefono}}</td>
+          <td>{{persona.correo}}</td>
+          <td>{{persona.estado}}</td>
+        </tr>
+
+
+      </tbody>
+    </table>
+    <hr>
+
+    <nav aria-label="Page navigation example">
+      <ul class="pagination justify-content-center">
+
+        <li class="page-item " [class.disabled]="pagina==1">
+          <button class="page-link" (click)="navegarPaginas('-')" tabindex="-1">
+            <<</button>
+        </li>
+        <li class="page-item">
+          <span class="page-link">
+            Página {{pagina}}
+            <span class="sr-only">(current)</span>
+          </span>
+        </li>
+        <li class="page-item " [class.disabled]="personas.length < registros">
+          <button class="page-link" (click)="navegarPaginas('+')">>></button>
+        </li>
+      </ul>
+    </nav>
 
   </div>
 </div>
