--- a/src/app/componentes/vehiculo/crear-vehiculo/crear-vehiculo.component.html
+++ b/src/app/componentes/vehiculo/crear-vehiculo/crear-vehiculo.component.html
@@ -1,76 +1,156 @@
-<div class="row">
-  <div class="col-md-6">
-
-
-    <div class="form-group">
-      <label for="placa">Placa</label>
-      <input [disabled]="id!='nuevo'" (input)="validarPlaca()" maxlength="10" type="text" [(ngModel)]="vehiculo.placa" class="form-control" id="placa">
-
-      <div *ngIf="error.placa!=''" class="alert alert-danger" role="alert">
-        <strong>Error: </strong> {{error.placa}}
-      </div>
-    </div>
-
-    <div class="form-group">
-      <label for="marca">Marca</label>
-      <input type="text" (input)="validarMarca()" maxlength="20" [(ngModel)]="vehiculo.marca" class="form-control" id="marca">
-      <div *ngIf="error.marca!=''" class="alert alert-danger" role="alert">
-        <strong>Error: </strong> {{error.marca}}
-      </div>
-    </div>
-
-    <div class="form-group">
-      <label for="modelo">Modelo</label>
-      <input (input)="validarModelo()" type="text" [(ngModel)]="vehiculo.modelo" maxlength="50" class="form-control" id="modelo">
-      <div *ngIf="error.modelo!=''" class="alert alert-danger" role="alert">
-        <strong>Error: </strong> {{error.modelo}}
-      </div>
-    </div>
-
-    <div class="form-group">
-        <label for="modelo">Color</label>
-        <input (input)="validarColor()" type="text" [(ngModel)]="vehiculo.color"  class="form-control" id="color">
-        <div *ngIf="error.color!=''" class="alert alert-danger" role="alert">
-          <strong>Error: </strong> {{error.color}}
-        </div>
-      </div>
-
-    
-
-
-
+<div class="card">
+  <div class="card-header bg-primary text-white">
+    Información del vehículo
   </div>
+  <div class="card-body">
+    <div class="row">
+      <div class="col-md-6">
 
-  <div class="col-md-6">
-      <div class="form-group">
+
+        <div class="form-group">
+          <label for="placa">Placa</label>
+          <input [disabled]="id!='nuevo'" (input)="validarPlaca()" maxlength="10" type="text" [(ngModel)]="vehiculo.placa" class="form-control"
+            id="placa">
+
+          <div *ngIf="error.placa!=''" class="alert alert-danger" role="alert">
+            <strong>Error: </strong> {{error.placa}}
+          </div>
+        </div>
+
+        <div class="form-group">
+          <label for="marca">Marca</label>
+          <input type="text" (input)="validarMarca()" maxlength="20" [(ngModel)]="vehiculo.marca" class="form-control" id="marca">
+          <div *ngIf="error.marca!=''" class="alert alert-danger" role="alert">
+            <strong>Error: </strong> {{error.marca}}
+          </div>
+        </div>
+
+        <div class="form-group">
+          <label for="modelo">Modelo</label>
+          <input (input)="validarModelo()" type="text" [(ngModel)]="vehiculo.modelo" maxlength="50" class="form-control" id="modelo">
+          <div *ngIf="error.modelo!=''" class="alert alert-danger" role="alert">
+            <strong>Error: </strong> {{error.modelo}}
+          </div>
+        </div>
+
+        <div class="form-group">
+          <label for="modelo">Color</label>
+          <input (input)="validarColor()" type="text" [(ngModel)]="vehiculo.color" class="form-control" id="color">
+          <div *ngIf="error.color!=''" class="alert alert-danger" role="alert">
+            <strong>Error: </strong> {{error.color}}
+          </div>
+        </div>
+
+
+
+
+
+      </div>
+
+      <div class="col-md-6">
+        <div class="form-group">
           <label for="anio">Año</label>
           <input (input)="validarAnio()" type="number" [(ngModel)]="vehiculo.anio" maxlength="4" class="form-control" id="anio">
           <div *ngIf="error.anio!=''" class="alert alert-danger" role="alert">
             <strong>Error: </strong> {{error.anio}}
           </div>
         </div>
-    
+
         <div class="form-group">
           <label for="numeroChasis">Número de chasis</label>
-          <input (input)="validarNumeroChasis()" type="text" [(ngModel)]="vehiculo.numeroChasis" maxlength="20" class="form-control" id="numeroChasis">
+          <input (input)="validarNumeroChasis()" type="text" [(ngModel)]="vehiculo.numeroChasis" maxlength="20" class="form-control"
+            id="numeroChasis">
           <div *ngIf="error.numeroChasis!=''" class="alert alert-danger" role="alert">
             <strong>Error: </strong> {{error.numeroChasis}}
           </div>
         </div>
-    
+
         <div class="form-group">
-            <label for="numeroMotor">Número de motor</label>
-            <input (input)="validarNumeroMotor()" type="text" [(ngModel)]="vehiculo.numeroMotor" maxlength="20" class="form-control" id="numeroMotor">
-            <div *ngIf="error.numeroMotor!=''" class="alert alert-danger" role="alert">
-              <strong>Error: </strong> {{error.numeroMotor}}
-            </div>
+          <label for="numeroMotor">Número de motor</label>
+          <input (input)="validarNumeroMotor()" type="text" [(ngModel)]="vehiculo.numeroMotor" maxlength="20" class="form-control"
+            id="numeroMotor">
+          <div *ngIf="error.numeroMotor!=''" class="alert alert-danger" role="alert">
+            <strong>Error: </strong> {{error.numeroMotor}}
           </div>
-    
+        </div>
+        <div class="form-group ">
+            <label for="numeroMotor">Dueño actual</label><br>
+          <div class="input-group">
+              <div class="input-group-prepend">
+                  <span class="input-group-text" id="inputGroup-sizing-sm">Persona</span>
+                </div>
+                <input [(ngModel)]="personaSeleccionada" (click)="open(content)" readonly type="text" class="form-control" aria-label="Sizing example input"
+                  aria-describedby="inputGroup-sizing-sm">
+                <button class="btn btn-light" (click)="open(content)">
+                  <i class="mdi mdi-magnify"></i>
+                </button>
+                <a class="btn btn-light " target="_blank" href="/#/persona/crearpersona/nuevo">
+                  <i class="mdi mdi-plus"></i>
+                </a>
+          </div>
+            
+         
+
+        </div>
+
         <div class="form-group">
-          <button [disabled]="error.placa!='' || vehiculo.placa=='' || error.marca!='' || vehiculo.marca=='' || error.modelo!='' || vehiculo.marca=='' || error.anio!='' || vehiculo.anio=='' || error.numeroChasis!='' || error.numeroMotor!='' || error.placa!='' || vehiculo.placa=='' "
+          <button [disabled]="vehiculo.dueno==null || error.placa!='' || vehiculo.placa=='' || error.marca!='' || vehiculo.marca=='' || error.modelo!='' || vehiculo.marca=='' || error.anio!='' || vehiculo.anio=='' || error.numeroChasis!='' || error.numeroMotor!='' || error.placa!='' || vehiculo.placa=='' "
             (click)="guardarVehiculo()" class="btn btn-primary">Guardar</button>
         </div>
-    
 
+
+      </div>
+    </div>
   </div>
 </div>
+
+<ng-template #content let-c="close" let-d="dismiss">
+    <div class="modal-header bg-primary text-white">
+      <h4 class="modal-title text-white">Seleccionar persona</h4>
+      <button type="button" class="close" aria-label="Close" (click)="d('Cross click')">
+        <span aria-hidden="true">&times;</span>
+      </button>
+    </div>
+    <div class="modal-body">
+  
+      <div class="input-group mb-3">
+        <div class="input-group-prepend">
+          <span class="input-group-text" id="basic-addon1">Filtro</span>
+        </div>
+        <input [(ngModel)]="terminoCliente" (input)="buscarPersona()" type="text" class="form-control" id="basic-url" aria-describedby="basic-addon3">
+      </div>
+  
+  
+      <table class="table table-responsive table-sm">
+        <thead>
+          <tr>
+  
+            <th scope="col">Identificación</th>
+            <th scope="col">Nombre</th>
+  
+            <th scope="col">Seleccionar</th>
+          </tr>
+        </thead>
+        <tbody>
+          <tr *ngFor="let persona of personas">
+  
+            <td>{{persona.cedula}}</td>
+            <td>{{persona.nombre}}</td>
+  
+            <td>
+              <button class="btn btn-success btn-sm" (click)="seleccionarPersona(persona); c('Close click')">
+                <i class="mdi mdi-arrow-down"></i>
+              </button>
+            </td>
+          </tr>
+  
+        </tbody>
+      </table>
+  
+  
+  
+    </div>
+    <div class="modal-footer">
+      <button type="button" class="btn btn-inverse" (click)="c('Close click')">Cerrar</button>
+    </div>
+  </ng-template>
