--- a/src/app/componentes/persona/consultar-persona/consultar-persona.component.html
+++ b/src/app/componentes/persona/consultar-persona/consultar-persona.component.html
@@ -34,8 +34,9 @@
 
 
         <select class="form-control" [(ngModel)]="orden" (change)="reiniciar()">
-          <option value="ASC">Más antiguas</option>
-          <option value="DESC">Más nuevas</option>
+          <option value="ASC">Ascendente</option>
+          <option value="DESC">Descendente</option>
+        
 
 
 
