--- a/src/app/shared/header-navigation/navigation.component.html
+++ b/src/app/shared/header-navigation/navigation.component.html
@@ -4,18 +4,18 @@
         <!-- Logo -->
         <!-- ============================================================== -->
         <div class="navbar-header">
-            <a class="navbar-brand" href="index.html">
+            <a class="navbar-brand" href="/">
                 <!-- Logo icon --><b>
                     <!--You can put here icon as well // <i class="wi wi-sunset"></i> //-->
                     <!-- Dark Logo icon -->
-                    <img src="assets/images/logo-icon.png" alt="homepage" class="dark-logo" />
+                    <img src="assets/images/kanban.png" width="108px" alt="homepage" class="dark-logo" />
                     <!-- Light Logo icon -->
                     <img src="assets/images/logo-light-icon.png" alt="homepage" class="light-logo" />
                 </b>
                 <!--End Logo icon -->
                 <!-- Logo text --><span>
                  <!-- dark Logo text -->
-                 <img src="assets/images/logo-text.png" alt="homepage" class="dark-logo" />
+               
                  <!-- Light Logo text -->    
                  <img src="assets/images/logo-light-text.png" class="light-logo" alt="homepage" /></span> </a>
         </div>
@@ -42,15 +42,15 @@
                 <!-- Profile -->
                 <!-- ============================================================== -->
                 <li class="nav-item dropdown" ngbDropdown placement="bottom-right">
-                    <a ngbDropdownToggle class="nav-link dropdown-toggle text-muted waves-effect waves-dark" href="javascript:void(0)" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"><img src="assets/images/users/1.jpg" alt="user" class="profile-pic" /></a>
+                    <a *ngIf="usuario.persona.empresa.nombreComercial" ngbDropdownToggle class="nav-link dropdown-toggle text-muted waves-effect waves-dark" href="javascript:void(0)" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"><img src="assets/images/users/1.jpg" alt="user" class="profile-pic" /> {{usuario.persona.empresa.nombreComercial}}</a>
                     <div class="dropdown-menu animated slideInDown" ngbDropdownMenu>
                         <ul class="dropdown-user">
                             <li>
                                 <div class="dw-user-box">
                                     <div class="u-img"><img src="assets/images/users/1.jpg" alt="user"></div>
                                     <div class="u-text">
-                                        <h4>Steave Jobs</h4>
-                                        <p class="text-muted">varun@gmail.com</p><a href="pages-profile.html" class="btn btn-rounded btn-danger btn-sm">View Profile</a></div>
+                                        <h4>{{usuario.persona.nombre}}</h4>
+                                        <p class="text-muted">{{usuario.persona.correo}}</p></div>
                                 </div>
                             </li>
                             <li role="separator" class="divider"></li>
@@ -60,7 +60,9 @@
                             <li role="separator" class="divider"></li>
                             <li><a href="#"><i class="ti-settings"></i> Account Setting</a></li>
                             <li role="separator" class="divider"></li>
-                            <li><a href="#"><i class="fa fa-power-off"></i> Logout</a></li>
+                            <li>
+                                <button class="btn btn-link" (click)="cerrarSesion()"><i class="fa fa-power-off"></i> Cerrar sesión</button>
+                            </li>
                         </ul>
                     </div>
                 </li>
