--- a/src/app/componentes/persona/consultar-persona/consultar-persona.component.html
+++ b/src/app/componentes/persona/consultar-persona/consultar-persona.component.html
@@ -73,7 +73,7 @@
     Resultados
   </div>
   <div class="card-body">
-    <table class="table table-sm table-striped table-responsive-sm table-responsive">
+    <table class="table table-sm table-striped table-responsive-sm table-responsive-md">
       <thead class=" ">
         <tr>
           <th></th>
