--- a/src/app/shared/header-navigation/navigation.component.html
+++ b/src/app/shared/header-navigation/navigation.component.html
@@ -42,7 +42,7 @@
                 <!-- Profile -->
                 <!-- ============================================================== -->
                 <li class="nav-item dropdown" ngbDropdown placement="bottom-right">
-                    <a *ngIf="usuario.persona.empresa.nombreComercial" ngbDropdownToggle class="nav-link dropdown-toggle text-muted waves-effect waves-dark" href="javascript:void(0)" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"><img src="assets/images/users/1.jpg" alt="user" class="profile-pic" /> {{usuario.persona.empresa.nombreComercial}}</a>
+                    <a *ngIf="usuario" ngbDropdownToggle class="nav-link dropdown-toggle text-muted waves-effect waves-dark" href="javascript:void(0)" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"><img src="assets/images/users/1.jpg" alt="user" class="profile-pic" /> {{usuario.persona.empresa.nombreComercial}}</a>
                     <div class="dropdown-menu animated slideInDown" ngbDropdownMenu>
                         <ul class="dropdown-user">
                             <li>
