--- a/src/app/componentes/persona/crear-persona/crear-persona.component.html
+++ b/src/app/componentes/persona/crear-persona/crear-persona.component.html
@@ -1,73 +1,80 @@
 <div class="card">
-    <div class="card-header bg-primary text-white">
-      Datos de la persona
-    </div>
-    <div class="card-body">
-      <div class="row">
+  <div class="card-header bg-primary text-white">
+    Datos de la persona
+  </div>
+  <div class="card-body">
+
+
+    <form class="" [formGroup]="personaForm" (ngSubmit)="guardarPersona()">
+
+      <div class="container row">
         <div class="col-md-4">
-      
-          <div class="form-group input-group-sm">
-            <label for="estado">Estado</label>
-            <select [(ngModel)]="persona.estado" class="form-control input-sm" id="estado">
-              <option value="ACTIVO">Activo</option>
-              <option value="INACTIVO">Inactivo</option>
+          <div class="form-group ">
+            <label for="">Estado</label>
+            <select class="form-control form-control-sm" formControlName="estado">
+              <option value="ACTIVO">ACTIVO</option>
+              <option value="INACTIVO">INACTIVO</option>
             </select>
           </div>
-          <div class="form-group input-group-sm">
-            <label for="cedula">Cédula / RUC</label>
-            <input  type="text" (input)="validarCedula()" maxlength="13" [(ngModel)]="persona.cedula" class="form-control input-sm"
-              id="cedula">
-            <div *ngIf="error.cedula!=''" class="alert alert-danger" role="alert">
-              <strong>Error: </strong> {{error.cedula}}
-            </div>
+          <div class="form-group ">
+            <label for="">Tipo</label>
+            <select class="form-control form-control-sm" formControlName="tipo">
+              <option value="NATURAL">NATURAL</option>
+              <option value="JURIDICA">JURIDICA</option>
+              <option value="SIN RUC">SIN RUC</option>
+            </select>
           </div>
-      
-          <div class="form-group input-group-sm">
-            <label for="nombre">Nombre / Razón social</label>
-            <input (input)="validarNombre()" type="text" [(ngModel)]="persona.nombre" maxlength="50" class="form-control" id="nombre">
-            <div *ngIf="error.nombre!=''" class="alert alert-danger" role="alert">
-              <strong>Error: </strong> {{error.nombre}}
-            </div>
+          <div class="form-group ">
+            <label for="">Cédula / RUC</label>
+            <input type="text" class="form-control form-control-sm" formControlName="cedula">
           </div>
-      
-      
-      
+          <div class="form-group ">
+            <label for="">Nombre / Razón social</label>
+            <input type="text" class="form-control form-control-sm" formControlName="nombre">
+          </div>
         </div>
-      
         <div class="col-md-4">
-          <div class="form-group input-group-sm">
-            <label for="telefono">Teléfono</label>
-            <input (input)="validarTelefono()" type="text" [(ngModel)]="persona.telefono" maxlength="50" class="form-control" id="telefono">
-            <div *ngIf="error.telefono!=''" class="alert alert-danger" role="alert">
-              <strong>Error: </strong> {{error.telefono}}
-            </div>
+          <div class="form-group ">
+            <label for="">Dirección</label>
+            <input type="text" class="form-control form-control-sm" formControlName="direccion">
           </div>
-      
-      
-          <div class="form-group input-group-sm">
-            <label for="direccion">Dirección</label>
-            <input (input)="validarDireccion()" [(ngModel)]="persona.direccion" type="text" class="form-control" id="direccion">
-            <div *ngIf="error.direccion!=''" class="alert alert-danger" role="alert">
-              <strong>Error: </strong> {{error.direccion}}
-            </div>
+          <div class="form-group ">
+            <label for="">Teléfono</label>
+            <input type="text" class="form-control form-control-sm" formControlName="telefono">
           </div>
-      
-      
-          <div class="form-group input-group-sm">
-            <label for="correo">Correo electrónico</label>
-            <input (input)="validarEmail()" [(ngModel)]="persona.correo" type="email" class="form-control" id="correo">
-            <div *ngIf="error.correo!=''" class="alert alert-danger" role="alert">
-              <strong>Error: </strong> {{error.correo}}
-            </div>
+
+          <div class="form-group ">
+            <label for="">Correo</label>
+            <input type="email" class="form-control form-control-sm" formControlName="correo">
           </div>
-      
-          <div class="form-group input-group-sm">
-            <button [disabled]="error.cedula!='' || persona.cedula==''  || error.nombre!='' || persona.nombre=='' || error.direccion!='' || persona.direccion=='' || error.telefono!='' || persona.telefono=='' || error.cedula!='' || persona.cedula=='' || error.correo!='' || persona.correo=='' "
-              (click)="guardarPersona()" class="btn btn-primary">Guardar</button>
+
+          <div class="form-check">
+            <input type="checkbox"  class="form-check-input" id="exampleCheck1" formControlName="esCliente">
+            <label class="form-check-label" for="exampleCheck1">Cliente</label>
           </div>
-      
+
+          <div class="form-check">
+            <input type="checkbox" class="form-check-input" id="exampleCheck2" formControlName="esEmpleado">
+            <label class="form-check-label" for="exampleCheck2">Empleado</label>
+          </div>
+
+          <div *ngIf="error!=''" class="alert alert-danger" role="alert">
+            <strong>Error: </strong>{{error}}
+          </div>
+
+          <button class="btn btn-primary" [disabled]="!personaForm.valid" type="submit">Guardar</button>
+
+
         </div>
       </div>
-    </div>
+
+
+
+
+
+
+    </form>
+
+
   </div>
-  
+</div>
