--- a/src/app/componentes/persona/crear-persona/crear-persona.component.html
+++ b/src/app/componentes/persona/crear-persona/crear-persona.component.html
@@ -26,7 +26,7 @@
           </div>
           <div class="form-group ">
             <label for="">Cédula / RUC</label>
-            <input type="text" class="form-control form-control-sm" formControlName="cedula">
+            <input autofocus type="text" class="form-control form-control-sm" formControlName="cedula">
           </div>
           <div class="form-group ">
             <label for="">Nombre / Razón social</label>
